--- a/CIV1538 - Assignment 1 - Tiggy Chen 1004400784.ipynb
+++ b/CIV1538 - Assignment 1 - Tiggy Chen 1004400784.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "5c0708e6-77cc-47a3-a943-5df3c4619e56",
+   "metadata": {},
+   "source": [
+    "# Fuck off"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "ac1a6868",
@@ -41,7 +49,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
