--- a/CIV1538 - Assignment 1 - Tiggy Chen 1004400784.ipynb
+++ b/CIV1538 - Assignment 1 - Tiggy Chen 1004400784.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "e104cf5a-e13f-4659-923c-f98b91057833",
    "metadata": {},
    "outputs": [],
@@ -22,31 +22,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d626207a-d264-485b-bd5b-57eef2511d4e",
+   "id": "13b2ae5e",
    "metadata": {},
    "source": [
-    "## Part 1. Binary Probit Model\n",
-    "A dataset: “CyclingPerceptionData-Assignment 1-2024,” is uploaded. \n",
-    "\n",
-    "Use column AB of sheet “Final”, which is of “Rank_Overall-Quality-Of-Biking”. \n",
-    "\n",
-    "Please consider this variable as categorical data. \n",
-    "\n",
-    "Please model the ranking over 2 as a binary Probit model. \n",
-    "\n",
-    "Please select the explanatory variables from this data sheet as relevant you think\n",
-    "\n",
-    "For estimation, you can use any software. The report should include at least the following sections:\n",
-    "* Present the model formulations and justification of independent variables. \n",
-    "* Selection of the best model. \n",
-    "* Justification of using the explanatory variables \n",
-    "\n",
-    "The report should be professional, not more than 2 pages (singles-space with a 1.25-inch margin on all four sides)."
+    "**Import data and format**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "id": "01706f16-9f90-4c37-9d5d-5c3a205782f1",
    "metadata": {},
    "outputs": [
@@ -273,7 +257,7 @@
        "[5 rows x 31 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -282,6 +266,162 @@
     "# import data\n",
     "df_raw = pd.read_csv(\"CyclingPerceptionData-Assignment 1-2024.csv\")\n",
     "df_raw.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "81976c56",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ID\n",
+      "sex\n",
+      "age\n",
+      "OwnBikes\n",
+      "NumberOfBikes\n",
+      "HH_Adults_15+\n",
+      "HH_Children_Dummy\n",
+      "NoOf15yrsOlderBikers\n",
+      "BikingForAllReason\n",
+      "BikingForWork\n",
+      "BikingForSchool\n",
+      "BikingForErrndFriends\n",
+      "Num of Recreational-Biker\n",
+      "AccessToMotorVehicle_1Yes-2No-3Unknown\n",
+      "BikeParkingAt Work_1Yes2No3Unknown\n",
+      "How longLivedInNH\n",
+      "Home_1Rent2Own\n",
+      "d3: Home Type\n",
+      "d5: LevelOfEducation\n",
+      "d6: Job Stastus\n",
+      "d8: Income\n",
+      "Time from MajorBikePath_min\n",
+      "Time from Neasrest BikeLane_Min\n",
+      "Neighbourhood ID\n",
+      "Neighbourhood-Area_SQKM\n",
+      "Neighbourhood-bikeLength_KM\n",
+      "Neighbourhood_Population\n"
+     ]
+    }
+   ],
+   "source": [
+    "# list all provided vars\n",
+    "print('\\n'.join(x for x in df_raw.columns if not x.startswith(\"Rank_\")))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d626207a-d264-485b-bd5b-57eef2511d4e",
+   "metadata": {},
+   "source": [
+    "## Part 1. Binary Probit Model\n",
+    "A dataset: “CyclingPerceptionData-Assignment 1-2024,” is uploaded. \n",
+    "\n",
+    "Use column AB of sheet “Final”, which is of “Rank_Overall-Quality-Of-Biking”. \n",
+    "\n",
+    "Please consider this variable as categorical data. \n",
+    "\n",
+    "Please model the ranking over 2 as a binary Probit model. \n",
+    "\n",
+    "Please select the explanatory variables from this data sheet as relevant you think\n",
+    "\n",
+    "For estimation, you can use any software. The report should include at least the following sections:\n",
+    "* Present the model formulations and justification of independent variables. \n",
+    "* Selection of the best model. \n",
+    "* Justification of using the explanatory variables \n",
+    "\n",
+    "The report should be professional, not more than 2 pages (singles-space with a 1.25-inch margin on all four sides)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "94250fae",
+   "metadata": {},
+   "source": [
+    "**Prepare data**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "b4db8d9a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0      3\n",
+       "1      3\n",
+       "2      3\n",
+       "3      4\n",
+       "4      3\n",
+       "      ..\n",
+       "238    5\n",
+       "239    5\n",
+       "240    2\n",
+       "241    3\n",
+       "242    3\n",
+       "Name: Rank_Overall-Quality-Of-Biking, Length: 243, dtype: category\n",
+       "Categories (6, int64): [1, 2, 3, 4, 5, 6]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# define Y-variable: \"Rank_Overall-Quality-Of-Biking\" (as categorical)\n",
+    "y_probit = df_raw['Rank_Overall-Quality-Of-Biking'].astype('category')\n",
+    "y_probit"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "40f3c28f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0      1\n",
+       "1      1\n",
+       "2      1\n",
+       "3      1\n",
+       "4      1\n",
+       "      ..\n",
+       "238    1\n",
+       "239    1\n",
+       "240    0\n",
+       "241    1\n",
+       "242    1\n",
+       "Name: Rank_Overall-Quality-Of-Biking, Length: 243, dtype: int64"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# convert to binary: y > 2\n",
+    "y_probit_gt2 = (y_probit.astype('int') > 2).astype(int)\n",
+    "y_probit_gt2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4cd28751",
+   "metadata": {},
+   "source": [
+    "**Select relevant explanatory variables**\n",
+    "\n",
+    "See above for list of all non-rank [non-response] features provided in the dataset."
    ]
   },
   {
@@ -307,6 +447,93 @@
     "\n",
     "The report should be professional, not more than 2 pages (singles-space with a 1.25-inch margin on all four sides)."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "03418f28",
+   "metadata": {},
+   "source": [
+    "**Prepare data**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "ae62029c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0      3\n",
+       "1      1\n",
+       "2      4\n",
+       "3      3\n",
+       "4      4\n",
+       "      ..\n",
+       "238    5\n",
+       "239    5\n",
+       "240    2\n",
+       "241    4\n",
+       "242    4\n",
+       "Name: Rank_On-Street-BikeLanes-Quality, Length: 243, dtype: category\n",
+       "Categories (6, int64): [1, 2, 3, 4, 5, 6]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# define Y-variable: \"Rank_On-Street-BikeLanes-Quality\" (as categorical)\n",
+    "y_logit = df_raw['Rank_On-Street-BikeLanes-Quality'].astype('category')\n",
+    "y_logit"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "6dfbe23b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0      1\n",
+       "1      0\n",
+       "2      1\n",
+       "3      1\n",
+       "4      1\n",
+       "      ..\n",
+       "238    1\n",
+       "239    1\n",
+       "240    1\n",
+       "241    1\n",
+       "242    1\n",
+       "Name: Rank_On-Street-BikeLanes-Quality, Length: 243, dtype: int64"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# convert to binary: Y > 1\n",
+    "y_logit_gt1 = (y_logit.astype(int) > 1).astype(int)\n",
+    "y_logit_gt1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9c57bb3c",
+   "metadata": {},
+   "source": [
+    "**Select relevant explanatory variables**\n",
+    "\n",
+    "See above for list of all non-rank [non-response] features provided in the dataset."
+   ]
   }
  ],
  "metadata": {
@@ -325,7 +552,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
