Test SSH part 2

--- a/CIV1538 - Assignment 1 - Tiggy Chen 1004400784.ipynb
+++ b/CIV1538 - Assignment 1 - Tiggy Chen 1004400784.ipynb
@@ -5,7 +5,7 @@
    "id": "5c0708e6-77cc-47a3-a943-5df3c4619e56",
    "metadata": {},
    "source": [
-    "# Test LL SSH"
+    "# Test LL SSH - Pt2"
    ]
   },
   {
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a7974fdf",
+   "id": "9642d08d",
    "metadata": {},
    "source": [
     "**Import data and format**"
@@ -271,7 +271,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "1b079d35",
+   "id": "6a1474f7",
    "metadata": {},
    "outputs": [
     {
@@ -339,7 +339,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "44d68303",
+   "id": "50aa01da",
    "metadata": {},
    "source": [
     "**Prepare data**"
@@ -348,7 +348,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "e61c91da",
+   "id": "6f059d94",
    "metadata": {},
    "outputs": [
     {
@@ -383,7 +383,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "d9351a05",
+   "id": "8fe70adb",
    "metadata": {},
    "outputs": [
     {
@@ -416,7 +416,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "24a84c30",
+   "id": "e3247084",
    "metadata": {},
    "source": [
     "**Select relevant explanatory variables**\n",
@@ -450,7 +450,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3ffa2db6",
+   "id": "c0becbb0",
    "metadata": {},
    "source": [
     "**Prepare data**"
@@ -459,7 +459,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "2e76b69e",
+   "id": "4d04c14f",
    "metadata": {},
    "outputs": [
     {
@@ -494,7 +494,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "17c7fa96",
+   "id": "f72088e1",
    "metadata": {},
    "outputs": [
     {
@@ -527,7 +527,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a7e50e44",
+   "id": "de266c6d",
    "metadata": {},
    "source": [
     "**Select relevant explanatory variables**\n",
