--- a/CIV1538 - Assignment 1 - Tiggy Chen 1004400784.ipynb
+++ b/CIV1538 - Assignment 1 - Tiggy Chen 1004400784.ipynb
@@ -10,14 +10,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "e104cf5a-e13f-4659-923c-f98b91057833",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import os\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import statsmodels.formula.api as smf"
    ]
   },
   {
@@ -30,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "01706f16-9f90-4c37-9d5d-5c3a205782f1",
    "metadata": {},
    "outputs": [
@@ -257,7 +258,7 @@
        "[5 rows x 31 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -270,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "id": "6a1474f7",
    "metadata": {},
    "outputs": [
@@ -382,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "8fe70adb",
    "metadata": {},
    "outputs": [
@@ -403,7 +404,7 @@
        "Name: Rank_Overall-Quality-Of-Biking, Length: 243, dtype: int64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -422,6 +423,17 @@
     "**Select relevant explanatory variables**\n",
     "\n",
     "See above for list of all non-rank [non-response] features provided in the dataset."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e6a635ed-b85a-49a6-8840-0ed6f2e22de8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# binary_probit = smf.probit(formula, data = df).fit()\n",
+    "# binary_probit.summary()"
    ]
   },
   {
@@ -458,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "id": "4d04c14f",
    "metadata": {},
    "outputs": [
@@ -480,7 +492,7 @@
        "Categories (6, int64): [1, 2, 3, 4, 5, 6]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -493,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "id": "f72088e1",
    "metadata": {},
    "outputs": [
@@ -514,7 +526,7 @@
        "Name: Rank_On-Street-BikeLanes-Quality, Length: 243, dtype: int64"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -534,6 +546,17 @@
     "\n",
     "See above for list of all non-rank [non-response] features provided in the dataset."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "935922a2-e4d0-49df-9898-84762d9cadab",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# binary_logistic = smf.logit(formula, data = df).fit()\n",
+    "# binary_logistic.summary()"
+   ]
   }
  ],
  "metadata": {
@@ -552,7 +575,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
