First try: probit model

--- a/CIV1538 - Assignment 1 - Tiggy Chen 1004400784.ipynb
+++ b/CIV1538 - Assignment 1 - Tiggy Chen 1004400784.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "e104cf5a-e13f-4659-923c-f98b91057833",
    "metadata": {},
    "outputs": [],
@@ -18,6 +18,7 @@
     "import pandas as pd\n",
     "import os\n",
     "import numpy as np\n",
+    "import statsmodels.discrete.discrete_model as smd\n",
     "import statsmodels.formula.api as smf"
    ]
   },
@@ -31,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "01706f16-9f90-4c37-9d5d-5c3a205782f1",
    "metadata": {},
    "outputs": [
@@ -258,7 +259,7 @@
        "[5 rows x 31 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -271,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "6a1474f7",
    "metadata": {},
    "outputs": [
@@ -348,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "6f059d94",
    "metadata": {},
    "outputs": [
@@ -370,7 +371,7 @@
        "Categories (6, int64): [1, 2, 3, 4, 5, 6]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -383,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "8fe70adb",
    "metadata": {},
    "outputs": [
@@ -404,7 +405,7 @@
        "Name: Rank_Overall-Quality-Of-Biking, Length: 243, dtype: int64"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -423,6 +424,126 @@
     "**Select relevant explanatory variables**\n",
     "\n",
     "See above for list of all non-rank [non-response] features provided in the dataset."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "923605b7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "probit_vars = ['age', 'sex', 'BikingForWork', 'Num of Recreational-Biker', \n",
+    "               'AccessToMotorVehicle_1Yes-2No-3Unknown', \n",
+    "               'Neighbourhood-bikeLength_KM', 'Time from MajorBikePath_min']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "392da776",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Optimization terminated successfully.\n",
+      "         Current function value: 0.501260\n",
+      "         Iterations 6\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table class=\"simpletable\">\n",
+       "<caption>Probit Regression Results</caption>\n",
+       "<tr>\n",
+       "  <th>Dep. Variable:</th>   <td>Rank_Overall-Quality-Of-Biking</td> <th>  No. Observations:  </th>  <td>   243</td> \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Model:</th>                       <td>Probit</td>             <th>  Df Residuals:      </th>  <td>   236</td> \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Method:</th>                        <td>MLE</td>              <th>  Df Model:          </th>  <td>     6</td> \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Date:</th>                   <td>Fri, 23 Feb 2024</td>        <th>  Pseudo R-squ.:     </th>  <td>0.01382</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Time:</th>                       <td>21:51:06</td>            <th>  Log-Likelihood:    </th> <td> -121.81</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>converged:</th>                    <td>True</td>              <th>  LL-Null:           </th> <td> -123.51</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Covariance Type:</th>            <td>nonrobust</td>           <th>  LLR p-value:       </th>  <td>0.7553</td> \n",
+       "</tr>\n",
+       "</table>\n",
+       "<table class=\"simpletable\">\n",
+       "<tr>\n",
+       "                     <td></td>                       <th>coef</th>     <th>std err</th>      <th>z</th>      <th>P>|z|</th>  <th>[0.025</th>    <th>0.975]</th>  \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>age</th>                                    <td>    0.0034</td> <td>    0.004</td> <td>    0.768</td> <td> 0.443</td> <td>   -0.005</td> <td>    0.012</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>sex</th>                                    <td>    0.1014</td> <td>    0.188</td> <td>    0.539</td> <td> 0.590</td> <td>   -0.267</td> <td>    0.470</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>BikingForWork</th>                          <td>    0.3989</td> <td>    0.150</td> <td>    2.665</td> <td> 0.008</td> <td>    0.106</td> <td>    0.692</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Num of Recreational-Biker</th>              <td>    0.0015</td> <td>    0.095</td> <td>    0.016</td> <td> 0.987</td> <td>   -0.185</td> <td>    0.188</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>AccessToMotorVehicle_1Yes-2No-3Unknown</th> <td> 2.961e-05</td> <td>    0.069</td> <td>    0.000</td> <td> 1.000</td> <td>   -0.135</td> <td>    0.136</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Neighbourhood-bikeLength_KM</th>            <td>    0.0282</td> <td>    0.017</td> <td>    1.688</td> <td> 0.091</td> <td>   -0.005</td> <td>    0.061</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Time from MajorBikePath_min</th>            <td>    0.0176</td> <td>    0.013</td> <td>    1.398</td> <td> 0.162</td> <td>   -0.007</td> <td>    0.042</td>\n",
+       "</tr>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "<class 'statsmodels.iolib.summary.Summary'>\n",
+       "\"\"\"\n",
+       "                                Probit Regression Results                                 \n",
+       "==========================================================================================\n",
+       "Dep. Variable:     Rank_Overall-Quality-Of-Biking   No. Observations:                  243\n",
+       "Model:                                     Probit   Df Residuals:                      236\n",
+       "Method:                                       MLE   Df Model:                            6\n",
+       "Date:                            Fri, 23 Feb 2024   Pseudo R-squ.:                 0.01382\n",
+       "Time:                                    21:51:06   Log-Likelihood:                -121.81\n",
+       "converged:                                   True   LL-Null:                       -123.51\n",
+       "Covariance Type:                        nonrobust   LLR p-value:                    0.7553\n",
+       "==========================================================================================================\n",
+       "                                             coef    std err          z      P>|z|      [0.025      0.975]\n",
+       "----------------------------------------------------------------------------------------------------------\n",
+       "age                                        0.0034      0.004      0.768      0.443      -0.005       0.012\n",
+       "sex                                        0.1014      0.188      0.539      0.590      -0.267       0.470\n",
+       "BikingForWork                              0.3989      0.150      2.665      0.008       0.106       0.692\n",
+       "Num of Recreational-Biker                  0.0015      0.095      0.016      0.987      -0.185       0.188\n",
+       "AccessToMotorVehicle_1Yes-2No-3Unknown  2.961e-05      0.069      0.000      1.000      -0.135       0.136\n",
+       "Neighbourhood-bikeLength_KM                0.0282      0.017      1.688      0.091      -0.005       0.061\n",
+       "Time from MajorBikePath_min                0.0176      0.013      1.398      0.162      -0.007       0.042\n",
+       "==========================================================================================================\n",
+       "\"\"\""
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "probit_mod = smd.Probit(y_probit_gt2, \n",
+    "                        df_raw[probit_vars]\n",
+    "                       )\n",
+    "probit_res = probit_mod.fit()\n",
+    "probit_res.summary()"
    ]
   },
   {
@@ -575,7 +696,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
